# haskell-sorts

./: format.sh  quicksort.cabal  sort.cabal
app/: Main.hs
app/Control/Applicative/: Tuple.hs
app/Data/Ord/: Heapsort.hs  Monad.hs  Quicksort.hs
app/Data/Vector/Mutable/: Function.hs
exe/: Main.hs
src/Control/Applicative/: Tuple.hs
src/Data/Ord/: Function.hs  Heapsort.hs  Mergesort.hs  Quicksort.hs
src/Data/Vector/Mutable/: Function.hs  Safe.hs  Writer.hs
test/: Main.hs
