cabal-version:      2.4
name:               quicksort
version:            0.1.0.0
author:             Br3akp01nt
maintainer:         -n
extra-source-files: CHANGELOG.md

executable quicksort
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      vector,
                      composition,
                      monad-loops
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    Data.Ord.Quicksort,
                      Data.Vector.Mutable.Function,
                      Control.Applicative.Tuple
