cabal-version:      2.4
name:               sort
version:            0.1.0.0
author:             Br3akp01nt
maintainer:         -n
extra-source-files: CHANGELOG.md

executable sort
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      vector,
                      composition,
                      monad-loops,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    Data.Ord.Quicksort,
                      Data.Ord.Heapsort,
                      Data.Ord.Monad,
                      Data.Vector.Mutable.Function,
                      Control.Applicative.Tuple

