cabal-version:      2.4
name:               sort
version:            0.1.0.0
author:             Br3akp01nt
maintainer:         -n
extra-source-files: CHANGELOG.md

executable sort
    main-is:          Main.hs
    default-language: Haskell2010
    hs-source-dirs:   exe
    build-depends:    base ^>=4.16.4.0,
                      sort-lib,
                      random

library sort-lib
    build-depends:    base ^>=4.16.4.0,
                      vector,
                      composition,
                      monad-loops,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Data.Ord.Quicksort,
                      Data.Ord.Heapsort,
                      Data.Ord.Mergesort,
                      Data.Ord.Monad,
                      Data.Vector.Mutable.Function,
                      Control.Applicative.Tuple

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base, 
                      sort-lib,
                      QuickCheck
    hs-source-dirs:   test
    default-language: Haskell2010

